--- a/server/utils/config.env
+++ b/server/utils/config.env
@@ -1,4 +1,4 @@
-DATABASE=mongodb+srv://ekenecf:ks3XEUcl0Vmionkj@wazobia.awkzbol.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://Wazobia-Test:t3NC0e4jjx7glagr@wazobia-test.4q3du8a.mongodb.net/?retryWrites=true&w=majority
 PORT=8080
 JWT=xax3mtNEktmPv+NjVFbmtsSwSOhO0GdXzngj73fwMfo=
 EMAILPASSWORD=oafqhmkkkczuvkpk
